docs: add swagger documentation to endpoints
